# project-1-data-analyst

./: main.py  pyproject.toml  requirements.txt
src/: dashboard.py  data_loader.py
