[project]
name = "data-analyst-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "tensorflow",
    "flask",
    "gunicorn",
    "requests",
    "beautifulsoup4",
    "pytest",
    "pytest-cov",
    "black",
    "mypy",
    "pydantic",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "jupyterlab",
    "notebook",
    "ipykernel",
    "plotly",
    "dash",
    "dash-bootstrap-components",
    "pytest-mock",
    "coverage",
    "tox",
    "pre-commit",
    "sphinx",
    "sphinx-rtd-theme",
    "twine",
    "boto3",
    "python-dotenv",
    "celery",
    "redis",
    "streamlit"
]
